 - Add Prima::Drawable::Antialias for drawing aliased graphic primitives
 - Interactive selection change in Edit and PodView does not flicker now
 - Drawable::text_wrap can operate on text together with glyph objects,
      allowing for proper wrapping of shaped text
 - Added ist::OR and ist::AND image stretch types
 - Implemented arabic kashida and interspace justifications for glyphs

1.61 2021-04-21
 - DWM API Removed (not useful on Windows 10)
 - Support regions and paths for the PS backend
 - Prima::XXXDialog classes finally moved to Prima::XXX::Dialog
 - Support unicode-aware filesystem functions
   -- Prima::Utils extended and Prima::sys::FS added
   -- Do not use libX11.XReadBitmapFileData as it is not unicode-aware
 - Add Application.stop to break from a running event loop

1.60 2020-10-31
 - Added ProgressBar with 3d look
 - Added PDF generation
   -- PrintDialog has extra "Save As PDF" target now
 - Clipboard enhancements
   -- cmClipboard added for X11 to select type of data to be pasted
   -- Image codecs return MIME as part of codec data
   -- Special formats Text and Image are documented
   -- Added Clipboard.[text/image/copy] KEEP parameter
 - Image.put_image supports new rop::ConstantColor
 - Optimizations for cache misses in Drawable.text_wrap
 - Fixes for unicode handling in FileDialog and Utils::get_dir
 - Fixes for XRandr extension
 - Fixes for scrolling with synthetic transparency in win32

1.59 2020-05-27
 - Added support for unicode bidirectional algorithm and text shaping:
     -- All standard widgets are moved to new shaped text implementation:
        formerly char-based position properties, such as firstChar and selection,
        are now cluster-based.
     -- Unicode bidirectional algorithms uses fribidi on all platforms
     -- Text shaping uses harfbuzz on unix
     -- Text::Bidi is no loger used
     -- Text input direction is deduced from new Application.language
 - Switch PostScript backend to generate embedded Type1 fonts only